Fix the footer spacing with content

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
     --secondary-color: #B84A62;
     --accent-color: #AC7B84;
     --link-color: #F5A6E6;
+    --footer-height: 3.5rem;
 
 
 
@@ -15,8 +16,9 @@ body {
     background-color: var(--primary-color);
     font-family: Montserrat;
     margin: 0;
-    padding: 0;
+    padding: 0 0 var(--footer-height) 0;
     color: white;
+    
 }
 
 a {
@@ -146,6 +148,10 @@ h1 {
     float: left;
 }
 
+div {
+    margin-bottom: 20px;
+}
+
 .right-content {
     margin-left: 350px;
 }
@@ -158,10 +164,16 @@ h1 {
     text-align: center;
 }
 
+
+
 footer {
-    padding: 40px 0 40px 0; 
     position: fixed; 
     text-align: center;
     bottom: 0; 
+    padding-top: calc(var(--footer-height)/2);
+    padding-bottom: calc(var(--footer-height)/2);
+
     width: 100%; 
+    background-color: var(--primary-color);
+    border-top: 1px solid var(--secondary-color);
 }
